<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/LinearLayoutLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="449dp"
                android:layout_gravity="center"
                android:layout_marginBottom="60dp"
                android:contentDescription="@string/logo"
                android:scaleX="2"
                android:scaleY="2"
                app:srcCompat="@drawable/justmath" />

        </LinearLayout>

        <Button
            android:id="@+id/btnJocuri"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/formabutoane"
            android:text="@string/jocuri"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSetari"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/formabutoane"
            android:text="@string/setari"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="507dp" />

        <Button
            android:id="@+id/btnDespreNoi"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/formabutoane"
            android:onClick="clickDespreNoi"
            android:text="@string/despre_noi"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="587dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/creat"
                android:textColor="#333333"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="816dp">

        <ImageView
            android:id="@+id/llanim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:translationY="50dp"
            android:translationX="-130dp"
            android:visibility="gone"
            app:srcCompat="@drawable/nor_start" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageNor2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:translationX="100dp"
            android:translationY="-300dp"
            android:visibility="gone"
            app:srcCompat="@drawable/nor_start2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageNor3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:translationX="100dp"
            android:translationY="-600dp"
            app:srcCompat="@drawable/nor_start3" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
