<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">


    <Button
        android:id="@id/btnInvFormeGeometrice"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_margin="40dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/formabutoane"
        android:text="@string/inva_formele_geometrice"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFormeGeometrice"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/formabutoane"
        android:onClick="clickSetari"
        android:text="@string/forme_geometrice"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInvFormeGeometrice" />

    <Button
        android:id="@+id/btnBanii"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:alpha="0.4"
        android:background="@drawable/formabutoane"
        android:onClick="clickDespreNoi"
        android:text="@string/cum_folosim_banii"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFormeGeometrice" />

    <Button
        android:id="@+id/brnVBcorect"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:alpha="0.4"
        android:background="@drawable/formabutoane"
        android:onClick="clickDespreNoi"
        android:text="Caută să înveți"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBanii" />

    <Button
        android:id="@+id/btnHarta"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:alpha="0.4"
        android:background="@drawable/formabutoane"
        android:onClick="clickDespreNoi"
        android:text="NE ORIENTĂM PE HARTĂ"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brnVBcorect" />

    <Button
        android:id="@+id/button4"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:background="@drawable/formabutoane"
        android:onClick="clickDespreNoi"
        android:text="@string/cum_folosim_banii"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHarta"
        app:layout_constraintVertical_bias="0.561" />

    <ImageView
        android:id="@+id/norcentru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/nor_start" />

    <ImageView
        android:id="@+id/norjos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:alpha="0.7"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:translationX="-80dp"
        android:translationY="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/nor_start3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="1017dp" />

</androidx.constraintlayout.widget.ConstraintLayout>